# spx8bit

./: README.md
assembler/: CMakeLists.txt  digits.asm  test.asm
assembler/docs/: CMakeLists.txt
assembler/include/: arch.hpp  file.hpp  lexer.hpp  parser.hpp  spx.hpp
assembler/source/: arch.cpp  file.cpp  lexer.cpp  main.cpp  parser.cpp
assembler/src/: architecture.cpp  main.cpp  parse.cpp  spx.cpp
